--- a/Draw/ZhaJinHua/View/MoneyTreeView.xib
+++ b/Draw/ZhaJinHua/View/MoneyTreeView.xib
@@ -44,20 +44,22 @@
 							<object class="IBUIImageView" id="712273025">
 								<reference key="NSNextResponder" ref="657232119"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{-7, -7}, {106, 78}}</string>
+								<string key="NSFrameSize">{47, 22}</string>
 								<reference key="NSSuperview" ref="657232119"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="46524347"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">zjh_money_tree_popMessage_background@2x.png</string>
+								</object>
 							</object>
 							<object class="IBUILabel" id="46524347">
 								<reference key="NSNextResponder" ref="657232119"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{0, 17}, {93, 38}}</string>
+								<string key="NSFrameSize">{47, 22}</string>
 								<reference key="NSSuperview" ref="657232119"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="136555037"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -68,10 +70,12 @@
 								<string key="IBUIText">Label</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAAA</bytes>
-									<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
 								</object>
-								<nil key="IBUIHighlightedColor"/>
+								<object class="NSColor" key="IBUIHighlightedColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
+								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUINumberOfLines">3</int>
 								<int key="IBUITextAlignment">1</int>
@@ -86,12 +90,11 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">93</double>
+								<double key="preferredMaxLayoutWidth">47</double>
 							</object>
 						</array>
-						<string key="NSFrame">{{48, 0}, {93, 71}}</string>
+						<string key="NSFrame">{{8, 0}, {47, 22}}</string>
 						<reference key="NSSuperview" ref="840940229"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="712273025"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="247927424">
@@ -103,10 +106,8 @@
 					<object class="IBUIButton" id="136555037">
 						<reference key="NSNextResponder" ref="840940229"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{9, 72}, {44, 52}}</string>
+						<string key="NSFrame">{{9, 30}, {44, 52}}</string>
 						<reference key="NSSuperview" ref="840940229"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -135,9 +136,8 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{141, 130}</string>
+				<string key="NSFrameSize">{62, 88}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="657232119"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="247927424"/>
@@ -160,6 +160,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">popMessageBody</string>
+						<reference key="source" ref="840940229"/>
+						<reference key="destination" ref="657232119"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageLabel</string>
 						<reference key="source" ref="840940229"/>
 						<reference key="destination" ref="46524347"/>
@@ -173,14 +181,6 @@
 						<reference key="destination" ref="712273025"/>
 					</object>
 					<int key="connectionID">20</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">popMessageBody</string>
-						<reference key="source" ref="840940229"/>
-						<reference key="destination" ref="657232119"/>
-					</object>
-					<int key="connectionID">21</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -215,15 +215,10 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="657232119"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="712273025"/>
 							<reference ref="46524347"/>
+							<reference ref="712273025"/>
 						</array>
 						<reference key="parent" ref="840940229"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="712273025"/>
-						<reference key="parent" ref="657232119"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
@@ -233,6 +228,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
 						<reference key="object" ref="46524347"/>
+						<reference key="parent" ref="657232119"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">15</int>
+						<reference key="object" ref="712273025"/>
 						<reference key="parent" ref="657232119"/>
 					</object>
 				</array>
@@ -255,54 +255,15 @@
 			<nil key="sourceID"/>
 			<int key="maxID">21</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MoneyTree</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MoneyTree.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MoneyTreeView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="moneyTree">MoneyTree</string>
-						<string key="popMessageBackgroundImageView">UIImageView</string>
-						<string key="popMessageBody">UIView</string>
-						<string key="popMessageLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="moneyTree">
-							<string key="name">moneyTree</string>
-							<string key="candidateClassName">MoneyTree</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageBackgroundImageView">
-							<string key="name">popMessageBackgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageBody">
-							<string key="name">popMessageBody</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageLabel">
-							<string key="name">popMessageLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MoneyTreeView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">zjh_money_tree_popMessage_background@2x.png</string>
+			<string key="NS.object.0">{93, 41}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
